browser/themes/shared/controlcenter/panel.css
/* ... */
/
*
Cookie
banner
state
toggles
for
the
popup
menu
item
*
/
#
protections
-
popup
-
cookie
-
banner
-
section
:
not
(
[
data
-
state
=
"
detected
"
]
)
description
#
protections
-
popup
-
cookie
-
banner
-
detected
#
protections
-
popup
-
cookie
-
banner
-
section
:
not
(
[
data
-
state
=
"
undetected
"
]
)
description
#
protections
-
popup
-
cookie
-
banner
-
undetected
#
protections
-
popup
-
cookie
-
banner
-
section
:
not
(
[
data
-
state
=
"
site
-
disabled
"
]
)
description
#
protections
-
popup
-
cookie
-
banner
-
site
-
disabled
{
display
:
none
;
}
/
*
Cookie
banner
state
toggles
for
the
subview
:
if
the
state
is
detected
show
*
the
disable
controls
;
if
the
state
is
site
-
disabled
show
the
enable
controls
.
*
/
#
protections
-
popup
-
cookieBannerView
:
not
(
[
data
-
state
=
"
detected
"
]
)
#
protections
-
popup
-
cookieBannerView
-
disable
-
button
#
protections
-
popup
-
cookieBannerView
:
not
(
[
data
-
state
=
"
detected
"
]
)
description
#
cookieBannerView
-
disable
-
site
#
protections
-
popup
-
cookieBannerView
:
not
(
[
data
-
state
=
"
detected
"
]
)
description
#
cookieBannerView
-
disable
-
site
-
warning
#
protections
-
popup
-
cookieBannerView
:
not
(
[
data
-
state
=
"
site
-
disabled
"
]
)
#
protections
-
popup
-
cookieBannerView
-
enable
-
button
#
protections
-
popup
-
cookieBannerView
:
not
(
[
data
-
state
=
"
site
-
disabled
"
]
)
description
#
cookieBannerView
-
enable
-
site
#
protections
-
popup
-
cookieBannerView
:
not
(
[
data
-
state
=
"
site
-
disabled
"
]
)
description
#
cookieBannerView
-
enable
-
site
-
description
{
display
:
none
;
}
.
protections
-
popup
-
smartblock
-
section
{
background
-
color
:
var
(
-
-
background
-
color
-
information
)
;
border
-
radius
:
var
(
-
-
border
-
radius
-
small
)
;
margin
-
inline
:
var
(
-
-
arrowpanel
-
menuitem
-
margin
-
inline
)
;
margin
-
block
-
start
:
var
(
-
-
space
-
small
)
;
padding
-
block
:
var
(
-
-
space
-
small
)
;
}
.
protections
-
popup
-
smartblock
-
toggle
-
box
{
margin
-
inline
:
var
(
-
-
arrowpanel
-
menuitem
-
margin
-
inline
)
;
padding
-
inline
:
var
(
-
-
arrowpanel
-
menuitem
-
padding
-
inline
)
;
}
.
protections
-
popup
-
smartblock
-
toggle
-
box
>
moz
-
toggle
{
padding
-
block
-
end
:
var
(
-
-
arrowpanel
-
menuitem
-
padding
-
block
)
;
}
/
*
Trustpanel
popup
*
/
#
trustpanel
-
header
-
row
{
justify
-
content
:
space
-
between
;
padding
-
block
-
start
:
var
(
-
-
space
-
small
)
;
padding
-
inline
-
start
:
var
(
-
-
space
-
large
)
;
}
#
trustpanel
-
popup
-
host
{
align
-
self
:
center
;
white
-
space
:
nowrap
;
}
#
trustpanel
-
graphic
-
section
{
margin
:
var
(
-
-
space
-
small
)
var
(
-
-
space
-
large
)
;
padding
:
var
(
-
-
space
-
large
)
;
padding
-
block
-
start
:
var
(
-
-
space
-
small
)
;
border
-
radius
:
var
(
-
-
border
-
radius
-
medium
)
;
flex
-
direction
:
column
;
}
.
only
-
trustpanel
{
visibility
:
hidden
;
#
trustpanel
-
popup
&
{
visibility
:
visible
;
}
}
#
trustpanel
-
popup
{
&
[
tracking
-
protection
=
"
warning
"
]
{
#
trustpanel
-
graphic
-
image
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
trustpanel
-
graphic
-
warning
.
svg
)
;
}
#
trustpanel
-
graphic
-
section
{
background
:
var
(
-
-
trustpanel
-
warning
-
bg
)
;
}
}
&
[
tracking
-
protection
=
"
enabled
"
]
{
#
trustpanel
-
graphic
-
image
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
trustpanel
-
graphic
-
enabled
.
svg
)
;
}
#
trustpanel
-
graphic
-
section
{
background
:
var
(
-
-
trustpanel
-
highlight
-
bg
)
;
}
}
&
[
tracking
-
protection
=
"
disabled
"
]
{
#
trustpanel
-
graphic
-
image
{
background
-
image
:
url
(
chrome
:
/
/
browser
/
skin
/
trustpanel
-
graphic
-
disabled
.
svg
)
;
}
#
trustpanel
-
graphic
-
section
{
background
:
var
(
-
-
trustpanel
-
graphic
-
bg
)
;
}
}
}
#
trustpanel
-
graphic
-
image
{
-
moz
-
context
-
properties
:
fill
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
center
;
fill
:
light
-
dark
(
#
0090ed
#
80ebff
)
;
width
:
80px
;
height
:
80px
;
background
-
size
:
contain
;
margin
-
inline
-
end
:
var
(
-
-
space
-
small
)
;
}
#
trustpanel
-
graphic
-
section
-
text
{
align
-
self
:
center
;
margin
-
inline
-
start
:
var
(
-
-
space
-
medium
)
;
}
.
trustpanel
-
header
{
font
-
weight
:
var
(
-
-
font
-
weight
-
bold
)
;
margin
-
block
-
end
:
var
(
-
-
space
-
medium
)
;
#
trustpanel
-
blockerDetailsView
&
#
trustpanel
-
blockerView
&
{
margin
-
block
-
start
:
var
(
-
-
space
-
large
)
;
}
}
#
trustpanel
-
toggle
-
checkbox
-
container
{
justify
-
content
:
space
-
between
;
}
#
trustpanel
-
connection
-
icon
#
trustpanel
-
siteinfo
-
icon
#
trustpanel
-
popup
-
icon
{
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
width
:
var
(
-
-
icon
-
size
)
;
height
:
var
(
-
-
icon
-
size
)
;
margin
-
inline
-
end
:
var
(
-
-
space
-
xsmall
)
;
align
-
self
:
center
;
}
#
trustpanel
-
connection
-
icon
#
trustpanel
-
siteinfo
-
icon
{
list
-
style
-
image
:
url
(
chrome
:
/
/
global
/
skin
/
icons
/
security
-
broken
.
svg
)
;
#
trustpanel
-
popup
[
connection
^
=
"
secure
"
]
&
{
list
-
style
-
image
:
url
(
chrome
:
/
/
global
/
skin
/
icons
/
security
.
svg
)
;
}
}
#
trustpanel
-
popup
-
icon
:
not
(
[
src
]
)
#
trustpanel
-
popup
-
icon
[
src
=
"
"
]
{
display
:
none
;
}
.
trustpanel
-
section
{
padding
:
var
(
-
-
arrowpanel
-
menuitem
-
padding
)
;
margin
:
var
(
-
-
arrowpanel
-
menuitem
-
margin
)
;
}
#
trustpanel
-
toggle
-
section
{
margin
:
var
(
-
-
space
-
large
)
;
&
[
disabled
]
label
{
color
:
var
(
-
-
button
-
text
-
color
-
ghost
-
disabled
)
;
opacity
:
var
(
-
-
button
-
opacity
-
disabled
)
;
}
}
.
protections
-
popup
-
list
-
host
-
label
.
trustpanel
-
blocker
-
section
>
label
{
margin
-
inline
:
var
(
-
-
space
-
xlarge
)
;
}
#
trustpanel
-
blocker
-
section
-
header
span
{
color
:
var
(
-
-
color
-
accent
-
primary
)
;
}
/* ... */

