Bug 1992940 - Truncate long urls in trustpanel. r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D269145

UltraBlame original commit: 06e700a97a577418f2e97376a7bad70123979b2d

--- a/browser/themes/shared/controlcenter/panel.css
+++ b/browser/themes/shared/controlcenter/panel.css
@@ -6773,12 +6773,36 @@ trustpanel
 popup
 -
 host
+-
+wrapper
+{
+overflow
+:
+hidden
+;
+}
+#
+trustpanel
+-
+popup
+-
+host
 {
 align
 -
 self
 :
 center
+;
+overflow
+:
+hidden
+;
+text
+-
+overflow
+:
+ellipsis
 ;
 white
 -
